# docker-image-test

./: Dockerfile  README.md  compose.yaml  pyproject.toml
src/: app.py
